tests/diagnostics_golden/diag_null_deref.txt
Diagnostics Golden: Null Deref
Source: tests/negative/neg_rule4_null_deref.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_rule4_null_deref.safe:13:14: error: dereference of possibly null access value
  |
  | 13 |       return p.all;  -- ERROR: P may be null
  |    |              ^~~~~
  |
  note: p is of type value_ptr (access value), which does not exclude null.
  note: no null check precedes this dereference on all paths reaching
        this program point.
  note: rule: D27 Rule 4 (Not-Null Dereference)
  note: per spec/02-restrictions.md section 2.8.4 paragraph 136:
        "Dereference of an access value shall require the access subtype
        to be not null. A conforming implementation shall reject any
        dereference where the access subtype at the point of dereference
        does not exclude null."
  suggestion: use a "not null access" subtype, or add an explicit null check:
        if p /= null then
           return p.all;
        end if;
------------------------------------------------------------------------
